--- a/unit-1-hello/start/index.html
+++ b/unit-1-hello/start/index.html
@@ -1,29 +1,28 @@
 <!doctype html>
 <html>
 <head>
-
-	<!-- 
-	About this page:
-	(add an explanation here)
-
-	-->
-
-
-	<title>Hello</title>
-	<!-- webring stylesheet -->
-	<link rel="stylesheet" href="https://zachwhalen.github.io/cwd-hub/ring/onionring.css">
-
+    BIRDS AREN'T REAL
+<link rel="stylesheet" href="style.css">
 </head>
+
+<!--
+About this page:
+What had motivated me to create this page in terms of the suggested theme is the long lasting and very old conspiracy theory that birds in their entirety are nothing more than government drones spying on the populace. The inspiration was merely the humor of maing fun of the theory in general.  -->
+
 <body>
-	<h1>Hello, world!</h1>
+    <img src="Muscular_Bird.webp" class="bird-right"
+    alt="A humorous image of a planes damaged snout with a deep dent, making fun of the fact that in order for a bird to deal great damage to the snout of a planes frame, it must have been a very muscular and overly buff bird with biceps and fists in place of wings." />
 
+<!-- Photo by <a href:"https://www.reddit.com/r/Bossfight/" on <a href="https://www.reddit.com/r/Bossfight/comments/wzy4ku/giga_bird_plane_crusher_pilots_nightmare/" -->
 
+    <img src="BIRD.jpg" class="bird-left" alt="A humorous image of a bird, its conext stating innacurtely Yes, I'm a bird. B-Government I-Drone RD" />
 
-	<!-- webring embed code -->
-	<div id="webring">
-	<script type="text/javascript" src="https://zachwhalen.github.io/cwd-hub/ring/onionring-variables.js"></script>
-	<script type="text/javascript" src="https://zachwhalen.github.io/cwd-hub/ring/onionring-widget.js"></script>
-	</div>
+<!-- Photo by <a href="https://www.facebook.com/groups/304679291292866/?__cft__[0]=AZaYlW0Y3iVQnWbYLPCy_o8F51RDfSabr8k9y65BjblCxflr94XbV4O7BDrub9fbAnAQAld5H1CQ0d1oECcasppEokZq7IsLV7qgB4e4JKnBHZd2p-m9ONMvbS-Uti371S3xJB9yf5P-gcrxYAri0XivJ7sKHXCsxrnphk91t9bK2sYdczu32gJ3AUrwZqiI7tFNwcZRm0Bqg_xFTswYrMbH&__tn__=-UC%2CP-R" on <a href="https://www.facebook.com/groups/birdswiththreateningauras/posts/1242520994175353/" -->
 
+    <h1>We are here to discuss how birds are simply government drones! Not only will the truth be uncovered of the drones in which crap on my Sedan, but as to why they blinked at me my exact latitude and longitude in morse code.
+        <textarea id="textarea"></textarea>
+            <script src="script.js"></script>
 </body>
 </html>
+
+<!-- With great difficulty, this code was attempted and failed over and over again, seeking aid not with coding but to what the command words, symbols, and phrases in the different scripts represented and did. After hours of watching videos in https://www.youtube.com/@TraversyMedia, and using AI not to write code or offer direct aid, but to gain explanations to concepts and information I didn't understand, in which the class and vidoes did't offer, I had turned in the first thing that had actually worked as the final prompt. This version actually follows the instructions given in the Canvas class assignment template. I did not come to the teacher for direct aid because I'm fully aware of my limitations, and knew that I would need a literal entire day of teachings to figure things out. In which was proven true, the turned in site prior to this took 14 hours straight with breaks of me composing trial and errors until pieces started falling into place.  -->
