--- a/unit-2-unbranding/start/talk.html
+++ b/unit-2-unbranding/start/talk.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <title>Butterfinger</title>
+  <title>Talk</title>
 
   <style>
 
@@ -61,4 +61,5 @@ width: 300px;}
 <p>*Then they fought.*</p>
 
 </body>
+
 </html>
